Fixed search results bug on mobile

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -87,8 +87,15 @@ header {
       display: block;
       padding: 8px;
     }
+  }
+}
 
-    //TODO : bug fix on mobile
+// collapse search result when search bar is not expanded on mobile
+
+@media all and (max-width: 750px) {
+  header:not(.search-expand) #search-results.show-results {
+    display: none;
+    padding: 0;
   }
 }
 
@@ -210,7 +217,6 @@ header {
       }
     }
   }
-
 }
 
 @media all and (max-width: 520px) {
